[package]
name = "noders"
version = "0.1.6"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
blake3 = "1.8.4"
boring = "5.1.0"
bytes = "1.11.1"
futures-util = "0.3.32"
h2 = "0.4.13"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.4.0"
hkdf = "0.12.4"
libc = "0.2.183"
md-5 = "0.10.6"
parking_lot = "0.12.5"
p256 = { version = "0.13.2", features = ["ecdsa", "pem", "pkcs8"] }
percent-encoding = "2.3.2"
pbkdf2 = "0.12.2"
prost = "0.14.1"
rand = "0.10.0"
rcgen = { version = "0.14.7", default-features = false, features = ["crypto", "pem", "ring"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "query", "rustls", "http2"] }
regex = "1.12.3"
rustc-hash = "2.1.1"
rustls = { version = "0.23.37", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.10.6"
sha2 = "0.10.9"
socket2 = "0.6.3"
tokio = { version = "1.50.0", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-boring = "5.0.0"
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12"] }
tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
time = { version = "0.3.41", features = ["formatting"] }
toml = "1.0.6"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "std"] }

[dev-dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt", "time", "test-util", "io-util"] }

[profile.test]
debug = 0
